--- a/index.html
+++ b/index.html
@@ -8,78 +8,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        html, body { 
-            overflow-x: hidden; 
-            max-width: 100%; 
-            min-height: 100vh; 
-            background: #f9f5eb; /* beige clair reposant */
-            color: #1a1a1a; 
-            font-family: 'Amiri', serif; 
-            touch-action: manipulation; /* évite zoom indésirable */
-        }
+        html, body { overflow-x: hidden; max-width: 100%; min-height: 100vh; background: #f9f5eb; color: #1a1a1a; font-family: 'Amiri', serif; touch-action: manipulation; }
         body { padding: 20px; }
-        #progress { margin-bottom: 25px; text-align: center; font-size: 22px; color: #1e88e5; }
+        #progress { margin-bottom: 25px; text-align: center; font-size: 22px; color: #1565c0; }
         #progress-circle { width: 110px; height: 110px; margin: 10px auto; }
-        select, input { 
-            width: 100%; 
-            padding: 14px; 
-            font-size: 20px; 
-            border: 2px solid #90caf9; 
-            border-radius: 12px; 
-            background: #fff; 
-            margin-bottom: 18px; 
-            box-shadow: 0 3px 8px rgba(30,136,229,0.15); 
-        }
+        select, input { width: 100%; padding: 14px; font-size: 20px; border: 2px solid #90caf9; border-radius: 12px; background: #fff; margin-bottom: 18px; box-shadow: 0 3px 8px rgba(30,136,229,0.15); }
         select option[style*="color"] { font-weight: bold; }
-        #content { 
-            direction: rtl; 
-            white-space: pre-wrap; 
-            line-height: 2.1; 
-            background: #ffffff; 
-            padding: 28px; 
-            border-radius: 16px; 
-            box-shadow: 0 8px 20px rgba(0,0,0,0.08); 
-            transition: all 0.4s ease; 
-            opacity: 0; 
-            transform: translateY(10px); 
-        }
+        #content { direction: rtl; white-space: pre-wrap; line-height: 2.1; background: #ffffff; padding: 28px; border-radius: 16px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); transition: all 0.4s ease; opacity: 0; transform: translateY(10px); }
         #content.loaded { opacity: 1; transform: translateY(0); }
-        .surah-title { 
-            font-size: 32px; 
-            color: #1565c0; 
-            text-align: center; 
-            margin: 35px 0 20px; 
-            border-bottom: 3px solid #bbdefb; 
-            padding-bottom: 12px; 
-        }
-        button { 
-            padding: 14px 30px; 
-            background: #1e88e5; 
-            color: white; 
-            border: none; 
-            border-radius: 12px; 
-            font-size: 18px; 
-            cursor: pointer; 
-            transition: all 0.3s; 
-            box-shadow: 0 4px 10px rgba(30,136,229,0.2); 
-            margin: 10px 6px; 
-        }
-        button:hover { background: #1565c0; transform: translateY(-3px); box-shadow: 0 8px 18px rgba(30,136,229,0.3); }
+        .surah-title { font-size: 32px; color: #1565c0; text-align: center; margin: 35px 0 20px; border-bottom: 3px solid #bbdefb; padding-bottom: 12px; }
+        button { padding: 14px 30px; background: #1565c0; color: white; border: none; border-radius: 12px; font-size: 18px; cursor: pointer; transition: all 0.3s; box-shadow: 0 4px 10px rgba(21,101,192,0.2); margin: 10px 6px; }
+        button:hover { background: #0d47a1; transform: translateY(-3px); box-shadow: 0 8px 18px rgba(21,101,192,0.3); }
         button.undo { background: #ef5350; }
         button.undo:hover { background: #d32f2f; }
         button.reset { background: #42a5f5; width: 100%; margin-top: 20px; }
         #font-size { display: flex; align-items: center; font-size: 18px; margin: 20px 0; color: #424242; }
-        #font-slider { flex: 1; margin-right: 15px; accent-color: #1e88e5; }
+        #font-slider { flex: 1; margin-right: 15px; accent-color: #1565c0; }
         #favorites, #history { margin-top: 35px; }
-        .item { 
-            background: #e8f0fe; 
-            padding: 14px; 
-            border-radius: 12px; 
-            margin-bottom: 14px; 
-            cursor: pointer; 
-            border-right: 5px solid #1e88e5; 
-            transition: background 0.3s; 
-        }
+        .item { background: #e8f0fe; padding: 14px; border-radius: 12px; margin-bottom: 14px; cursor: pointer; border-right: 5px solid #1565c0; transition: background 0.3s; }
         .item:hover { background: #bbdefb; }
         #loading { text-align: center; margin: 30px; font-size: 20px; color: #757575; }
         h3 { color: #1565c0; margin-bottom: 18px; text-align: center; font-size: 24px; }
@@ -90,7 +36,7 @@
         التقدم: <span id="count">٠/٦٠</span> (<span id="percent">٠٪</span>)
         <svg id="progress-circle" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="45" fill="none" stroke="#e3f2fd" stroke-width="12"/>
-            <circle cx="50" cy="50" r="45" fill="none" stroke="#1e88e5" stroke-width="12" stroke-dasharray="283" stroke-dashoffset="283" id="progress-ring"/>
+            <circle cx="50" cy="50" r="45" fill="none" stroke="#1565c0" stroke-width="12" stroke-dasharray="283" stroke-dashoffset="283" id="progress-ring"/>
         </svg>
     </div>
 
@@ -116,8 +62,9 @@
     <div id="history"><h3>السجل الأخير</h3></div>
 
     <script>
-        const hizbRanges = [ /* colle ici le tableau complet des hizbRanges que tu avais au début */ ];
-        const surahNames = [ /* colle ici le tableau complet des noms de sourates en arabe */ ];
+        // Colle ici tes tableaux complets (hizbRanges et surahNames en arabe)
+        const hizbRanges = [ /* ton tableau original avec 60 entrées */ ];
+        const surahNames = ['','الفاتحة','البقرة','آل عمران','النساء','المائدة','الأنعام','الأعراف','الأنفال','التوبة','يونس','هود','يوسف','الرعد','إبراهيم','الحجر','النحل','الإسراء','الكهف','مريم','طه','الأنبياء','الحج','المؤمنون','النور','الفرقان','الشعراء','النمل','القصص','العنكبوت','الروم','لقمان','السجدة','الأحزاب','سبأ','فاطر','يس','الصافات','ص','الزمر','غافر','فصلت','الشورى','الزخرف','الدخان','الجاثية','الأحقاف','محمد','الفتح','الحجرات','ق','الذاريات','الطور','النجم','القمر','الرحمن','الواقعة','الحديد','المجادلة','الحشر','الممتحنة','الصف','الجمعة','المنافقون','التغابن','الطلاق','التحريم','الملك','القلم','الحاقة','المعارج','نوح','الجن','المزمل','المدثر','القيامة','الإنسان','المرسلات','النبأ','النازعات','عبس','التكوير','الانفطار','المطففين','الانشقاق','البروج','الطارق','الأعلى','الغاشية','الفجر','البلد','الشمس','الليل','الضحى','الشرح','التين','العلق','القدر','البينة','الزلزلة','العاديات','القارعة','التكاثر','العصر','الهمزة','الفيل','قريش','الماعون','الكوثر','الكافرون','النصر','المسد','الإخلاص','الفلق','الناس'];
 
         let readHizbs = JSON.parse(localStorage.getItem('hizbsRead')) || [];
         let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
@@ -162,8 +109,9 @@
 
         async function loadHizb(num) {
             if (!num) return;
-            document.getElementById('loading').style.display = 'block';
+            const loading = document.getElementById('loading');
             const content = document.getElementById('content');
+            loading.style.display = 'block';
             content.innerHTML = '';
             content.classList.remove('loaded');
 
@@ -172,51 +120,72 @@
                 let currentSurah = 0;
                 const range = hizbRanges[num - 1];
                 for (const part of range.parts) {
-                    const res = await fetch(`https://api.alquran.cloud/v1/surah/${part.surah}/quran-uthmani`);
+                    const url = `https://api.quran.com/api/v4/quran/verses/uthmani?chapter_number=${part.surah}`;
+                    console.log('Fetch: ' + url);
+                    const res = await fetch(url);
+                    if (!res.ok) throw new Error(`Erreur HTTP ${res.status}`);
                     const data = await res.json();
+                    if (!data.verses) throw new Error('Pas de versets');
+
                     if (part.surah !== currentSurah) {
                         text += `<div class="surah-title">سورة ${surahNames[part.surah]}</div>`;
                         currentSurah = part.surah;
                     }
-                    const ayahs = data.data.ayahs;
+                    const verses = data.verses;
                     for (let i = part.start; i <= part.end; i++) {
-                        const ayah = ayahs.find(a => a.numberInSurah === i);
-                        if (ayah) text += ayah.text + ' ۝ ';
+                        const verse = verses.find(v => v.verse_number === i);
+                        if (verse && verse.text_uthmani) text += verse.text_uthmani + ' ۝ ';
                     }
                 }
+
                 const isRead = readHizbs.includes(Number(num));
                 let btns = `<br><button onclick="markDone(${num})">منتهي ✓</button>`;
                 if (isRead) btns += ` <button class="undo" onclick="unmarkDone(${num})">إلغاء ✗</button>`;
                 btns += `<br><button onclick="addFavorite('حزب ${num}')">إضافة للمفضلة ★</button>`;
+
                 content.innerHTML = text + btns;
                 content.classList.add('loaded');
                 content.scrollIntoView({ behavior: 'smooth' });
                 addToHistory(`حزب ${num}`);
-            } catch (e) {
-                content.innerHTML = 'خطأ في التحميل، تحقق من الإنترنت أو حاول لاحقًا.';
+            } catch (err) {
+                console.error('Erreur:', err);
+                content.innerHTML = `خطأ في التحميل: ${err.message}<br>جرب لاحقًا أو تحقق من الإنترنت.`;
             }
-            document.getElementById('loading').style.display = 'none';
+            loading.style.display = 'none';
         }
 
-        // Fonctions markDone, unmarkDone, resetProgress, addFavorite, renderFavorites, addToHistory, renderHistory restent similaires
-        // Adapte les textes en arabe et appelle renderHizbSelect() + renderSurahSelect() + updateProgress() au démarrage
+        // Même logique pour loadSurah (adapte avec api.quran.com si besoin)
+        async function loadSurah(surahNum) {
+            if (!surahNum) return;
+            const loading = document.getElementById('loading');
+            const content = document.getElementById('content');
+            loading.style.display = 'block';
+            content.innerHTML = '';
+            content.classList.remove('loaded');
 
-        // Exemple resetProgress corrigé
-        function resetProgress() {
-            if (confirm('هل تريد إعادة تعيين كل التقدم؟')) {
-                readHizbs = [];
-                localStorage.setItem('hizbsRead', JSON.stringify(readHizbs));
-                renderHizbSelect();
-                updateProgress();
-                document.getElementById('content').innerHTML = '';
+            try {
+                const url = `https://api.quran.com/api/v4/quran/verses/uthmani?chapter_number=${surahNum}`;
+                const res = await fetch(url);
+                const data = await res.json();
+                let text = `<div class="surah-title">سورة ${surahNames[surahNum]}</div>`;
+                data.verses.forEach(v => text += v.text_uthmani + ' ۝ ');
+                content.innerHTML = text + `<br><button onclick="addFavorite('سورة ${surahNum}')">إضافة للمفضلة ★</button>`;
+                content.classList.add('loaded');
+                content.scrollIntoView({ behavior: 'smooth' });
+                addToHistory(`سورة ${surahNames[surahNum]}`);
+            } catch (err) {
+                content.innerHTML = `خطأ: ${err.message}`;
             }
+            loading.style.display = 'none';
         }
 
-        // Appel initial
+        // Fonctions markDone / unmarkDone / resetProgress / addFavorite / renderFavorites / addToHistory / renderHistory restent les mêmes que dans tes versions précédentes, juste traduis les textes (ex: "Terminé" → "منتهي", etc.)
+
+        // Initialisation
         renderHizbSelect();
         renderSurahSelect();
         updateProgress();
-        // Ajoute renderFavorites(); renderHistory(); si tu gardes ces sections
+        // Ajoute renderFavorites(); renderHistory(); si tu veux
     </script>
 </body>
 </html>
